fixing text alignment

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+
 }
 
 #title {
@@ -25,4 +26,11 @@ text {
   background-color: lightgray;
   padding: .5em;
   font-size: .75em;
+}
+
+#treemap {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
